feat: 학과별 boardSeqs와 menuSeqs 업데이트