@@ -8,9 +8,7 @@ import com.kustacks.kuring.worker.scrap.deptinfo.RegisterDepartmentMap;
 import com.kustacks.kuring.worker.scrap.deptinfo.StaffScrapInfo;
 import com.kustacks.kuring.worker.scrap.dto.ScrapingResultDto;
 import com.kustacks.kuring.worker.scrap.parser.notice.NoticeHtmlParser;
-import lombok.NoArgsConstructor;
 
-import java.util.Collections;
 import java.util.List;
 
 @RegisterDepartmentMap(key = DepartmentName.EDU_TECH)
@@ -24,8 +22,8 @@ public class EducationalTechnologyDept extends EducationCollege {
 
         List<String> professorForumIds = List.of("5099763");
         List<String> forumIds = List.of("11707");
-        List<String> boardSeqs = Collections.emptyList();
-        List<String> menuSeqs = Collections.emptyList();
+        List<String> boardSeqs = List.of("1462");
+        List<String> menuSeqs = List.of("10740");
 
         this.staffScrapInfo = new StaffScrapInfo(professorForumIds);
         this.noticeScrapInfo = new NoticeScrapInfo(forumIds, "EDUTECH", boardSeqs, menuSeqs);
